55959: [T][I1][Extra] - Issues after testing on iPhone SE under Safari browser

--- a/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
+++ b/app/design/frontend/Fecon/theme/web/css/source/responsive/_product_page.less
@@ -345,7 +345,7 @@
         }
     }
 }
-@media (max-width: 316px) {
+@media (max-width: 318px) {
     body.catalog-product-view {
         .page-wrapper {
             main#maincontent {
@@ -355,7 +355,7 @@
                             .page-title-wrapper {
                                 .page-title {
                                     span {
-                                        font-size: 30px !important;
+                                        font-size: 25px !important;
                                     }
                                 }
                             }
@@ -368,7 +368,7 @@
                                         .price-wrapper {
                                             span.price {
                                                 font-family: @font-family-name__verb;
-                                                font-size: 30px;
+                                                font-size: 25px;
                                                 font-weight: 600;
                                                 color: @color-black;
                                             }
@@ -379,55 +379,12 @@
                             .product-reviews-summary {
                                 .reviews-actions {
                                     margin-left: -7px;
+                                    a {
+                                        margin-top: 15px;
+                                    }
                                 }
                                 .rating-summary {
                                     margin-bottom: 15px;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        }
-    }
-    @supports (-webkit-overflow-scrolling: touch) {
-        body.catalog-product-view {
-            .page-wrapper {
-                main#maincontent {
-                    .columns {
-                        .column.main {
-                            .product-info-main {
-                                .page-title-wrapper {
-                                .page-title {
-                                    span {
-                                            font-size: 25px !important;
-                                        }
-                                    }
-                                }
-                                .product-info-price {
-                                    .product-info-stock-sku {
-                                        left: -9px;
-                                    }
-                                    .price-box {
-                                        span.price-container {
-                                            .price-wrapper {
-                                                span.price {
-                                                    font-family: @font-family-name__verb;
-                                                    font-size: 25px;
-                                                    font-weight: 600;
-                                                    color: @color-black;
-                                                }
-                                            }
-                                        }
-                                    }
-                                }
-                                .product-reviews-summary {
-                                    .reviews-actions {
-                                        margin-left: -7px;
-                                    }
-                                    .rating-summary {
-                                        margin-bottom: 15px;
-                                    }
                                 }
                             }
                         }
